# ChangeLog for media-video/kino
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/kino/ChangeLog,v 1.8 2003/12/07 23:34:25 hanno Exp $

*kino-0.6.5 (08 Dec 2003)

  08 Dec 2003; Hanno Boeck <hanno@gentoo.org> kino-0.6.5.ebuild:
  Version bump.

  06 Sep 2003; Hanno Boeck <hanno@gentoo.org> kino-0.6.4.ebuild,
  files/kino_gcc33_fix:
  Compile fix for gcc 3.3.

*kino-0.6.4 (13 Mar 2003)

  13 Mar 2003; Hanno Boeck <hanno@gentoo.org> kino-0.6.4.ebuild :
  User submitted ebuild by Alex Boissy. Resolves bug #16279.

*kino-0.60 (06 Dez 2002)

  13 Mar 2003; Hanno Boeck <hanno@gentoo.org> kino-0.6.ebuild :
  Changed version to avoid conflicts with new version 0.6.4.

  06 Dez 2002; Hanno Boeck <hanno@gentoo.org> kino-0.60.ebuild :
  New version.
  It actually is called 0.6, but portage cannot handle that, so I renamed
  it to 0.60.

*kino-0.51 (14 Oct 2002)

  14 Oct 2002; Hanno Boeck <hanno@gentoo.org> kino-0.51.ebuild :
  
  kino ebuild added.
  kino is a digital video editing software for linux.
  Credits to the author Arne Schirmacher.