@@ -1,6 +1,6 @@
-MD5 c59d81ee31ee12ee98b9096618b4aeba kino-0.6.5.ebuild 1099
-MD5 360d0bb187577b3fdd4fbb71efee2623 kino-0.6.4.ebuild 1148
-MD5 d4548e8c8041470cc3dd477b78ba7f30 ChangeLog 1126
-MD5 fa29fab322ca2ccd7fb46b1bb3cae292 files/digest-kino-0.6.5 63
+MD5 f201505cbfacde0e004a73690f0aead7 kino-0.6.5.ebuild 1109
+MD5 b9f840fd26267e5f5f0c10b75335db57 kino-0.6.4.ebuild 1157
+MD5 6815e29a433974bbf9b1513ce8e9fe6a ChangeLog 1234
 MD5 6f060bac87a882af3e8b288aa9992cad files/digest-kino-0.6.4 62
+MD5 fa29fab322ca2ccd7fb46b1bb3cae292 files/digest-kino-0.6.5 63
 MD5 b2f31fc5dee7c9c3bb0896e17d940d75 files/kino_gcc33_fix 1384
